# edgetech-dump1090-json

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose-wo-mqtt.yml  docker-compose.yaml  docker-compose.yml  dump1090-json-wo-mqtt.env  dump1090-json.env
.github/workflows/: code-quality.yaml  docker-build.yaml  docker-test.yaml  dockerbuild.yml  release-tag.yaml  releasetag.yml
dump1090-json/: Dockerfile  dump1090-json_pub_sub.py  pyproject.toml
