[tool.poetry]
name = "dump1090-json"
version = "0.1.0"
description = "MQTT client to read SBS1 messages from Dump1090 and publish them as a JSON to an MQTT topic"
authors = ["IQT Labs <labsinfo@iqt.org>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.11"
coloredlogs = "^15.0.1"
paho-mqtt = "^1.5.0"
pandas = "^2.0.2"
schedule = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
flake8 = "^6.0.0"
mypy = "^1.4.0"
ipython = "^8.14.0"
jupyterlab = "^4.0.2"
notebook = "^6.5.4"
pkgconfig = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
